--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,10 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Azure Web App</h1>
+    <h1>Welcome to my Azure Web App</h1>
     <p>This is a simple webpage to test the AzAppGW->AzFW->AzWebApp setup.</p>
     <footer>
-        &copy; 2024 My Azure Web App
+        &copy; 2024 Azure Web App
     </footer>
 </body>
 </html>
