Update index to speficy the app is going via private peering.

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Azure Web App Test</title>
+    <title>Private Peering Azure Web App Test</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,7 +29,7 @@
 </head>
 <body>
     <h1>Welcome to my Azure Web App</h1>
-    <p>This is a simple webpage to test the AzAppGW->AzFW->AzWebApp setup.</p>
+    <p>This is a simple webpage to test the AzWebApp-Peer-AzAppGW->AzFW setup. App Gateway inbound and Azure Firewall Outbound</p>
     <footer>
         &copy; 2024 Azure Web App
     </footer>
