--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to my Azure Web App</h1>
+    <h1>Welcome to my Private Peering Azure Web App</h1>
     <p>This is a simple webpage to test the AzWebApp-Peer-AzAppGW->AzFW setup. App Gateway inbound and Azure Firewall Outbound</p>
     <footer>
         &copy; 2024 Azure Web App
